<resources>
    <string name="app_name">C@p Sophia</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home">C@p Sophia</string>
    <string name="title_home">C@p Sophia</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_trajet">Se rendre à C@P SOPHIA</string>
    <string name="title_activity_maps">C@p Sophia</string>
    <string name="title_activity_detail_magasin">Détails</string>
    <string name="select_magasin_verbose">Sélectionnez un magasin pour obtenir des informations</string>
    <string name="mag_event">Evènements du magasin</string>
    <string name="magasin">Magasin</string>
    <string name="event_from">Evènements de</string>
    <string name="example_open_hour">8:00 à 12:00</string>
    <string name="notifications">Notifications</string>
    <string name="example_mag_desc">Description du magasin</string>
    <string name="from">Le :</string>
    <string name="example_date">21 avril</string>
    <string name="example_hour_midnight">00h00</string>
    <string name="date_to">A :</string>
    <string name="participate">Participer</string>

    <string name="event_notification_title_template">Event: %1$s</string>


    <string name="action_share">Partager</string>
    <string name="action_reply">Se rendre au magasin</string>
    <string name="plan_du_site">Plan du site</string>
</resources>
