<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
            android:id="@+id/eventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Event"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/from"/>

        <TextView
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/example_date"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="64dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="204dp"
                android:layout_height="match_parent">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                <TextView
                        android:id="@+id/dtStartLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:text="@string/from"/>

                <TextView
                        android:id="@+id/dtstart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/example_hour_midnight"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                <TextView
                        android:id="@+id/dtEndLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:text="@string/date_to"/>

                <TextView
                        android:id="@+id/dtEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/example_hour_midnight"/>

            </LinearLayout>
        </LinearLayout>
        <Switch
                android:text="@string/participate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/participate" android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:textStyle="bold" android:textAlignment="center"/>
    </LinearLayout>

</LinearLayout>